2014-06-18 Karl Nordstrom <karl.nordstrom@cern.ch>

  * Improved AlphaS ODE solver performance.

2014-06-17  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.3 release!

	* tests/Makefile.am: Add appropriate programs to "make installcheck".

2014-06-17  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* wrappers/python/Makefile.am: 'make distcheck' and out-of-source
        builds should work now.

2014-06-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add CVMFS and AFS downloading (by preference) to the lhapdf
	script, as well as user-configurable download sources and tarball
	removal.

	* Fix bug in PDF::qcdOrder method, and deprecate that method in
	favour of orderQCD (to match AlphaS and the flag name).

	* Further improvements to error messages when trying to load an invalid PDF.

	* Tweak output of testalphas.cc

	* Adding first make check targets (requires CT10nlo to be installed).

2014-06-15  Andy Buckley  <andy.buckley@cern.ch>

	* Flavour thresholds in alpha_s solvers, and threshold subgrids
	from ODE solver (by Karl Nordstrom)

	* Add accessors to a PDF's AlphaS object and to an AlphaS' QCD order.

2014-06-12  Andy Buckley  <andy.buckley@cern.ch>

	* Bump version number for next release.

	* Add mapping of reweighting functions into Python.

2014-06-11  Andy Buckley  <andy.buckley@cern.ch>

	* Fix compiler warnings re. unused variables in LHAGlue.h and AlphaS.h headers.

2014-06-09  David Grellscheid  <david.grellscheid@durham.ac.uk>

	* Fix attempted use of non-existent std::vector::find method.

2014-05-29  Andy Buckley  <andy.buckley@cern.ch>

	* Change source name of analyticpdf example.

	* Adding a mini-constructor to PDF to make sure that _forcePos is
	set to a sane default value.

2014-05-28  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.2 release!

2014-05-28  James Ferrando <james.ferrando@glasgow.ac.uk>

	* Fix HWLHAPDF behaviour in pdfset

2014-05-27  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.1 release!
